// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dark theme 1`] = `
<pre
  className="sc-bwzfXH kLnTyM language-jsx"
>
  <code>
    let i = 3
  </code>
</pre>
`;

exports[`inline render 1`] = `
<code
  className="sc-bdVaJa jrgjFv language-jsx"
>
  let i = 3
</code>
`;

exports[`normal render 1`] = `
<pre
  className="sc-bwzfXH iKeDjp language-jsx"
>
  <code>
    let i = 3
  </code>
</pre>
`;
